# trilium-client

./: .gitignore  README.md  Vagrantfile  pyproject.toml
res/: trilium_handler.js
res/test/: config.ini  document.db
tests/: docker-compose.yml  test_trilium_client.py
trilium_client/: __init__.py  trilium_client.py
